# jobs-analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _environment.yml  app_deploy.py  batch_scrape.py  clf.pkl  clf_funcs.py  environment.yml  glassdoor_scraper.py  indeed-scraper.py  jobs-analysis - Copy.ipynb  jobs-analysis-nlp.ipynb  jobs-analysis.ipynb  linkedin_existing_scraper.ipynb  pyproject.toml  requirements.txt  scrapbook.ipynb  scraping_jobs.ipynb  script.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
app/: app_deploy.py  clf_funcs.py
indeed/: IndeedScraper.py  README.md  batch_scrape.py
notebooks/: 01-jobs-analysis.ipynb  02-jobs-analysis-nlp.ipynb  03-jobs-topics.ipynb
scripts/: batch_scrape.py  jupyterlab.sh
src/indeed/: IndeedScraper.py  README.md  batch_scrape.py
src/indeed_scraper/: README.md  batch.py  loggers.py  scraping.py  utils.py
